--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The whole content below can be removed with the new code.-->
 <div style="text-align:center">
   <h1>
-    This is the first app! to {{title}}!!
+    This is the first app! to {{title}} <BR> {{body}}!!
   </h1>
   ... Starter Files ...
 </div>
