--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='card'>
     <div class='card-header'>
-        Product List
+        {{pageTitle}}
     </div>
     <div class='card-body'>
         <div class='row'>
@@ -14,26 +14,25 @@
                 <h4>Filter by:</h4>
             </div>
         </div>
-    <div class='table-responsive'>
-        <table class='table'>
-            <thead>
-                <tr>
-                    <th>
-                        <button class='btn btn-primary'>
+        <div class='table-responsive'>
+            <table class='table'>
+                <thead>
+                    <tr>
+                        <th>
+                            <button class='btn btn-primary'>
                             Show Image
                         </button>
-                    </th>
-                    <th>Product</th>
-                    <th>Code</th>
-                    <th>Available</th>
-                    <th>Price</th>
-                    <th>5 Star Ratings</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-    </div>
+                        </th>
+                        <th>Product</th>
+                        <th>Code</th>
+                        <th>Available</th>
+                        <th>Price</th>
+                        <th>5 Star Ratings</th>
+                        </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
