--- a/src/app/shared/star.component.html
+++ b/src/app/shared/star.component.html
@@ -1,7 +1,7 @@
 <div class="crop"
      [style.width.px]="starWidth"
      [title]="rating"
-     (click)='onClick()'
+     (click)="onClick()"
      >
   <div style="width: 75px">
     <span class="fa fa-star"></span>
